# vade-didcomm

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md  VERSIONS.md
src/: datatypes.rs  keypair.rs  lib.rs  message.rs  message_handler.rs  presentation.rs  protocol_handler.rs  rocks_db.rs  utils.rs  vade_didcomm.rs
src/db/: debug.rs  local_storage.rs  mod.rs  rocks_db.rs
src/protocols/: did_exchange.rs  mod.rs  pingpong.rs  protocol.rs
src/protocols/did_exchange/: complete.rs  datatypes.rs  did_exchange.rs  helper.rs  mod.rs  problem_report.rs  protocol.rs  request.rs  response.rs
src/protocols/issue_credential/: credential.rs  datatypes.rs  done.rs  helper.rs  holder.rs  issuer.rs  mod.rs  problem_report.rs
src/protocols/present_proof/: datatypes.rs  done.rs  helper.rs  mod.rs  presentation.rs  problem_report.rs  prover.rs  verifier.rs
src/protocols/presentation_exchange/: datatypes.rs  helper.rs  holder.rs  mod.rs  presentation_exchange_data.rs  verifier.rs
src/vade_transport/: mod.rs  redis_pubsub.rs  vade_transport.rs
tests/: common.rs  did-exchange.rs  issue-credential.rs  message.rs  present-proof.rs  presentation-exchange.rs  rocks_db.rs  vade_didcomm.rs
utilities/: Cargo.toml  cargo.toml
utilities/src/: keypair.rs  lib.rs  vade_helper.rs
